# CS-Jacobs

./: README.md
C++/: CMakeLists.txt
C++/C++ I/Lab1/: .a2p1.cpp.swp  a1p1.cpp  a1p2  a1p2.cpp  a1p4  a1p4.cpp  a1p6  a1p6.cpp  a2p1  a2p2.cpp  a2p3.cpp  a2p4  a2p5.cpp  a2p6.cpp  info
C++/C++ I/Lab1/Critter/: Critter  Critter.h  testcritter  testcritter.cpp
C++/C++ I/Lab1/Critter2/: Critter.h  critter  testcritter.cpp
C++/C++ I/Lab2/: info
C++/C++ I/Lab2/a3p1/: City.cpp
C++/C++ I/Lab2/a3p2/: Critter.h  testcritter  testcritter.cpp
C++/C++ I/Lab2/a3p3/: Critter.h  testcritter
C++/C++ I/Lab2/a3p4/: Critter.h  testcritter  testcritter.cpp
C++/C++ I/Lab2/a3p5/: copyconstructor  copyconstructor.cpp
C++/C++ I/Lab2/a3p6/: .Complex.cpp.swo  Complex.h  testcomplex.cpp
C++/C++ I/Lab2/a4p1/: testbox  testbox.cpp
C++/C++ I/Lab2/a4p2/: creature  creature.cpp
C++/C++ I/Lab2/a4p3/: Creature.cpp
C++/C++ I/Lab2/a4p4/: Creature.cpp  Creature.h  testcreature  testcreature.cpp
C++/C++ I/Lab2/a4p5/: .Shapes.cpp.swp  Shapes.cpp  Shapes.h
C++/C++ I/Lab2/a4p6/: Vector.cpp  testvector  testvector.cpp
C++/C++ I/Lab3/a5p1/: Shapes.cpp  testHexagon
C++/C++ I/Lab3/a5p2/: test  testTournamentMember.cpp
C++/C++ I/Lab3/a5p3/: TournamentMember.cpp  testPlayer.cpp
C++/C++ I/Lab3/a5p4/: TournamentMember.cpp  test  testRefree.cpp
C++/C++ I/Lab3/a5p5/: test
C++/C++ I/Lab3/a6p2/: fraction.cpp  test
C++/C++ I/Lab3/a6p4/: Area.h  Circle.cpp  Ring.cpp  Ring.h  Square.cpp  Square.h  test  testvirtual.cpp
C++/C++II/week1/lab1/: a1p2.cpp  a1p3  a1p3.cpp  a1p4  a1p4.cpp
C++/C++II/week1/lab2/: a2p1  a2p1.c
C++/C++II/week2/lab1/: a3p1  (+9 more)
C++/Lab1/: a1p1  a1p3  a1p3.cpp  a1p5  a1p5.cpp  a2p1.cpp  a2p2  a2p3  a2p4.cpp
C++/Lab1/Critter/: Critter.cpp  explanations.txt
C++/Lab1/Critter2/: Critter.cpp
C++/Lab2/a3p1/: City.h  testcity  testcity.cpp
C++/Lab2/a3p2/: Critter.cpp
C++/Lab2/a3p3/: .Critter.h.swp  Critter.cpp  testcritter.cpp
C++/Lab2/a3p4/: Critter.cpp
C++/Lab2/a3p6/: .Complex.cpp.swp  Complex.cpp  testcomplex
C++/Lab2/a4p1/: Box.cpp  Box.h
C++/Lab2/a4p3/: Creature.h  testcreature  testcreature.cpp
C++/Lab2/a4p5/: testshapes  testshapes.cpp
C++/Lab2/a4p6/: CMakeLists.txt  Vector.h
C++/Lab3/a5p1/: Shapes.h  testHexgon.cpp
C++/Lab3/a5p2/: TournamentMember.cpp  TournamentMember.h
C++/Lab3/a5p3/: TournamentMember.h  test
C++/Lab3/a5p4/: TournamentMember.h
C++/Lab3/a5p5/: fraction.cpp  fraction.h  testfraction.cpp
C++/Lab3/a6p1/: rcolor  rcolor.cpp
C++/Lab3/a6p2/: fraction.h  testfraction.cpp
C++/Lab3/a6p4/: Area.cpp  Circle.h  Rectangle.cpp  Rectangle.h
(+312 files in other folders)
